force-app/main/default/objects/Invoice__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, Account__r.PersonContact.FirstName &amp;&quot; &quot;&amp; Account__r.PersonContact.LastName, Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>