force-app/main/default/objects/Invoice__c/fields/Aging_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Aging_Bucket__c</fullName>
    <formula>IF(Number_of_days_Overdue__c &lt;= 30, &quot;1. (00 - 30 Days)&quot;,
IF(Number_of_days_Overdue__c &lt;= 60, &quot;2. (31 - 60 Days)&quot;,
IF(Number_of_days_Overdue__c &lt;= 90, &quot;3. (61 - 90 Days)&quot;,
IF(Number_of_days_Overdue__c &lt;= 180, &quot;4. (91 - 180 Days)&quot;,
IF(Number_of_days_Overdue__c &lt;= 360, &quot;5. (181 - 360 Days)&quot;,
&quot;6. (&gt; 360 Days)&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Bucket</label>
    <type>Text</type>
</CustomField>