force-app/main/default/objects/Invoice__c/fields/Amount_in_Words__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Words__c</fullName>
    <label>Amount in Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>