force-app/main/default/objects/Invoice__c/fields/Financial_Detail__c.field-meta.xml
<CustomField>
    <fullName>Financial_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Detail</label>
    <referenceTo>Financial_Detail__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>