force-app/main/default/objects/Invoice__c/fields/Grand_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Amount__c</fullName>
    <label>Grand Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>