force-app/main/default/objects/Invoice__c/fields/Grand_Total_For_Flow__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_For_Flow__c</fullName>
    <formula>IF(Unit__r.Project_Name_F__c &lt;&gt; &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, &apos;AED &apos;&amp;TEXT(Grand_Total_Formula__c), &apos;CHF &apos;&amp;TEXT(Grand_Total_Formula__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total For Flow</label>
    <type>Text</type>
</CustomField>