force-app/main/default/objects/Invoice__c/fields/Grand_Total_Formula__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Formula__c</fullName>
    <formula>(VAT_Amount__c + Sub_Total_Amount__c) - Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>