force-app/main/default/objects/Invoice__c/fields/Invoice_Number_To_Process_Gianfranco__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_To_Process_Gianfranco__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Invoice Number To Process Gianfranco</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>