force-app/main/default/objects/Invoice__c/fields/Invoice_Number_To_Process_MIRA_VERDE__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_To_Process_MIRA_VERDE__c</fullName>
    <label>Invoice Number To Process MIRA VERDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>