force-app/main/default/objects/Invoice__c/fields/Invoice_Seq__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Seq__c</fullName>
    <inlineHelpText>Per-project invoice sequence number, assigned on insert by InvoiceTriggerHelper. Drives Invoice_Number__c. Replaces the per-project Invoice_Number_To_Process_* fields.</inlineHelpText>
    <label>Invoice Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>