force-app/main/default/objects/Invoice__c/fields/Number_of_days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_Overdue__c</fullName>
    <formula>IF(
    TODAY() &gt; Due_Date__c,
    TODAY() - Due_Date__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>