force-app/main/default/objects/Invoice__c/fields/Secondary_Currency__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Currency__c</fullName>
    <label>Secondary Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>