force-app/main/default/objects/Invoice__c/fields/Secondary_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Currency_Amount__c</fullName>
    <label>Secondary Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>