force-app/main/default/objects/Invoice__c/fields/Status_Show_Report__c.field-meta.xml
<CustomField>
    <fullName>Status_Show_Report__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>