force-app/main/default/objects/Invoice__c/fields/Sub_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Amount__c</fullName>
    <label>Sub Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>