force-app/main/default/objects/Invoice__c/fields/Tax_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Date__c</fullName>
    <description>Date printed on the Tax Invoice PDF. Locked in (once) from the earliest non-cancelled receipt's Payment Date the first time a Tax Invoice is generated. Blank until then.</description>
    <inlineHelpText>Set automatically from the first payment's date when the Tax Invoice is first generated. Do not edit manually.</inlineHelpText>
    <label>Tax Invoice Date</label>
    <type>Date</type>
</CustomField>