force-app/main/default/objects/Invoice__c/fields/Unit_Building__c.field-meta.xml
<CustomField>
    <fullName>Unit_Building__c</fullName>
    <formula>Unit__r.Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Building</label>
    <type>Text</type>
</CustomField>