force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Sub_Total_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>